# trispectral

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
benchmarks/: differential_operators.ipynb
benchmarks/1D_flows/: bench_eigenvalues.ipynb  operator_matrices.py
cases/1D/: bench_eigenvalues.ipynb  operator_matrices.py  oss_operators.py
cases/1D_flows/: bench_eigenvalues.ipynb
cases/differential_operators/: gradient.ipynb  gradient_and_divergence.ipynb
misc/mpl_styles/: main.mplstyle
src/pytrispectral/: __init__.py  differential_matrices.py  differentiation.py  grid.py  manager.py  math_utils.py
src/trispectral/: __init__.py  differentiation.py  manager.py  math_utils.py
trispectral/: differentiation.py  grid.py
trispectral/stability/: __init__.py  algebraic_reduction.py
trispectral/tests/: test_differential_operators.py
tutorials/: bvp.ipynb  bvp_and_evp.ipynb  differential_operators.ipynb  stability.ipynb
