[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
target-version = ['py310', 'py311', 'py312']
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | \.vscode
  | build
  | dist
  | misc
  | figures
)/
'''

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Rules: https://beta.ruff.rs/docs/rules/
ignore=[
    # Ambigious variable names 'l', 'O', or 'I'
    "E741",
    # Star imports
    "F403",
    # Definitions from star imports
    "F405",
]